name:                pure-default
version:             0.8.0.0
homepage:            purehs.org/doc/pure-default
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-default.git

library
  build-depends:
    base

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Default

  default-language: Haskell2010
